# ElectrifySZU

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  SECURITY_ROADMAP.md  SUBSCRIPTION_FLOW.md  compose.campus.yml  compose.public.yml  compose.yml  log_config.py  main.py  pyproject.toml  server.py  server_campus.py  server_public.py
.github/workflows/: ci.yml  pages.yml
apartment-power-monitor/: README.md
apartment-power-monitor/data/: buildings.txt
building_power_ranking/: README.md  __init__.py  cache.py  cache_builder.py  floor_probe.py  ranking.py
deploy/campus/: Dockerfile
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER-GUIDE.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  prompts-collection.md
electrifyszu/: __init__.py  __main__.py  config.py  database.py  version.py
room-power-monitor/: .env.example  .gitignore  README.md  VERSION  requirements.txt
scripts/: migrate_to_sqlite.py
subscription_alerts/: README.md  __init__.py  alerts.py  email_service.py  email_templates.py  store.py  subscriptions.py  test_delivery.py  unsubscribe.py  verification.py
tests/: conftest.py  test_alerts.py  test_building_power_ranking.py  test_buildings_parse.py  test_config.py  test_email_service.py  test_email_templates.py  test_proxy.py  test_room_power_api.py  test_server.py  test_server_security.py  test_store.py  test_verification.py
web/: app.js  i18n-data.js  index.html  loading-status.js  styles.css  work-intro.css  work-intro.html  work-intro.js  work-intro.md
(+75 files in other folders)
