[project]
name = "electrifyszu"
version = "2.718"
description = "SZU dorm power balance dashboard and alerting toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
electrifyszu = "server:main"
electrifyszu-delivery-test = "subscription_alerts.test_delivery:main"
