[project]
name = "electrifyszu"
version = "2.7182"
description = "SZU dorm power balance dashboard and alerting toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "node_modules",
]

[tool.ruff.lint]
select = ["E4", "E7", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
electrifyszu = "server:main"
electrifyszu-delivery-test = "electrifyszu.subscription.test_delivery:main"
